--- a/raspicat_slam/package.xml
+++ b/raspicat_slam/package.xml
@@ -9,6 +9,7 @@
   <license>Apache-2.0</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <exec_depend>raspicat_gamepad_controller</exec_depend>
   <exec_depend>cartographer_ros</exec_depend>
   <exec_depend>gmapping</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
